src/test/deca/syntax/invalid/mauvais_return_4.deca
// Description:
//    on retourne printlnx qui n'est pas une exp
//
// Resultats:
// ligne 8: "no viable alternative at input 'printlnx'"


{ return printlnx("hey");}
